--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1> Site de production </h1> 
+<!DOCTYPE html>
+<html> 
+	<head> 
+		<link rel="stylesheet" href="CSS\mainSheet.css" type="text/css"/>
+
+	</head>
+
+	<body>
+		<div class="navbar">
+       		 <a href="index.html">Accueil</a> 
+       		 <a href="forms.html">Formulaire</a>
+       		 <a href="create.html">Créer</a> 
+        	 <a href="account.html">Compte</a> 
+		</div>
+
+	</body>
+</html>
