debut dev sur les themes

--- a/Pages/Theme.html
+++ b/Pages/Theme.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html> 
 	<head> 
-		<link rel="stylesheet" href="CSS\mainSheet.css" type="text/css"/>
-
+		<link rel="stylesheet" href="..\CSS\mainSheet.css" type="text/css"/>
 	</head>
-
 	<body>
 		<div class="navbar">
        		 <a href="index.html">Accueil</a> 
@@ -14,5 +12,16 @@
         	 <a href="account.html">Compte</a> 
 		</div>
 
+		
+		<br/>
+
+		<article class="forecast">
+    <h1>Football</h1>
+    <article class="day-forecast">
+        <h2>C'est parti pour le football</h2>
+        <button class="btn"></button>
+    </article>
+
+</article>
 	</body>
 </html>
