affichage des thèmes

--- a/Pages/Theme.html
+++ b/Pages/Theme.html
@@ -2,26 +2,128 @@
 <html> 
 	<head> 
 		<link rel="stylesheet" href="..\CSS\mainSheet.css" type="text/css"/>
+		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<div class="navbar">
-       		 <a href="index.html">Accueil</a> 
-       		 <a href="forms.html">Formulaire</a>
-       		 <a href="Pages/Theme.html">Thèmes</a>
-       		 <a href="create.html">Créer</a> 
-        	 <a href="account.html">Compte</a> 
+       		 <a href="../index.html">Accueil</a> 
+       		 <a href="../forms.html">Formulaire</a>
+       		 <a href="pages/theme.html">Thèmes</a>
+       		 <a href="../create.html">Créer</a> 
+        	 <a href="../account.html">Compte</a> 
 		</div>
 
-		
-		<br/>
+		<button class="btn btn-theme"> Salut
+			
+		</button>
 
-		<article class="forecast">
-    <h1>Football</h1>
-    <article class="day-forecast">
-        <h2>C'est parti pour le football</h2>
-        <button class="btn"></button>
-    </article>
-
-</article>
+        <ul class="grid-theme">
+            <li class="theme">
+            <a href="../index.html">           	
+            	<div class="card">           		
+        	    	<div class="card-header">
+    	        		<p>
+    	        			Le Football
+    	        		</p>    		
+    	        	</div>
+             		<div class="card-body"> 
+             			<p>
+    	        		 	Et c'est parti pour le football.
+    	        		</p> 		
+    	        	</div>
+    	        </div>
+            </li> 
+   	        <li class="theme"> 
+   	        <a href="../index.html"> 	        	
+   	        	<div class="card">
+   	        		
+   	        		<div class="card-header">   
+   	        			<p>
+        	    			Le Tennis
+    	        		</p> 		
+    	        	</div>
+             		<div class="card-body">  
+             			<p>
+        	    			Et c'est parti pour le tennis.
+        	    		</p>   		
+        	   		</div>
+        	    </div>
+   	        </li> 
+  	        <li class="theme"> 
+  	        <a href="../index.html">	        	
+  	        	<div class="card"> 	        		
+  	        		<div class="card-header">
+        	    		<p>
+    	       	 			Le Rugby
+         	  	  	  </p>    		
+    	       	 	</div>
+             		<div class="card-body"> 
+             			<p>
+        	    			Et c'est parti pour le rugby.
+        	    		</p> 		
+        	    	</div>
+        	    </div>
+  	        </li> 
+  	        <li class="theme"> 
+  	        <a href="../index.html"> 	        	
+  	        	<div class="card">
+  	        		<div class="card-header">
+        	    		<p>
+    	       	 			Le Rugby
+         	  	  	  </p>    		
+    	       	 	</div>
+             		<div class="card-body"> 
+             			<p>
+        	    			Et c'est parti pour le rugby.
+        	    		</p> 		
+        	    	</div>
+        	    </div>
+  	        </li>
+  	        <li class="theme"> 
+  	        <a href="../index.html">       	
+  	        	<div class="card">
+  	        		<div class="card-header">
+        	    		<p>
+    	       	 			Le Rugby
+         	  	  	  </p>    		
+    	       	 	</div>
+             		<div class="card-body"> 
+             			<p>
+        	    			Et c'est parti pour le rugby.
+        	    		</p> 		
+        	    	</div>
+        	    </div>
+  	        </li>
+  	        <li class="theme">	
+  	        <a href="../index.html">        	
+  	        	<div class="card">
+  	        		<div class="card-header">
+        	    		<p>
+    	       	 			Le Rugby
+         	  	  	  </p>    		
+    	       	 	</div>
+             		<div class="card-body"> 
+             			<p>
+        	    			Et c'est parti pour le rugby.
+        	    		</p> 		
+        	    	</div>
+        	    </div>
+  	        </li>
+  	        <li class="theme">
+  	        <a href="../index.html">           	
+            	<div class="card">
+        	    	<div class="card-header">
+    	        		<p>
+    	        			Le Football
+    	        		</p>    		
+    	        	</div>
+             		<div class="card-body"> 
+             			<p>
+    	        		 	Et c'est parti pour le football.
+    	        		</p> 		
+    	        	</div>
+    	        </div>
+            </li> 
+        </ul>
 	</body>
 </html>
