--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="navbar">
        		 <a href="index.html">Accueil</a> 
        		 <a href="forms.html">Formulaire</a>
-       		 <a href="Pages/Theme.html">Thèmes</a>
+       		 <a href="pages/theme.html">Thèmes</a>
        		 <a href="create.html">Créer</a> 
         	 <a href="account.html">Compte</a> 
 		</div>
