--- a/extensions/navbar.html
+++ b/extensions/navbar.html
@@ -3,9 +3,9 @@
 </div>
 
 <div class="navbar">
-    <a href="index.html">Accueil</a> 
+    <a href="index.php">Accueil</a> 
    	<a href="forms.html">Formulaire</a>
-   	<a href="Pages/Theme.html">Thèmes</a>
+   	<a href="theme.php">Thèmes</a>
    	<a href="create.html">Créer</a> 
    	<a href="account.html">Compte</a> 
 </div>
