début de la page de connexion

--- a/extensions/navbar.html
+++ b/extensions/navbar.html
@@ -7,5 +7,5 @@
    	<a href="forms.html">Formulaire</a>
    	<a href="theme.php">Thèmes</a>
    	<a href="create.html">Créer</a> 
-   	<a href="account.html">Compte</a> 
+   	<a href="compte.php">Compte</a> 
 </div>
