--- a/extensions/navbar.html
+++ b/extensions/navbar.html
@@ -1,11 +1,13 @@
-<div class=logoMenu>
-	<img src="ressources/logo/logo_small.png" alt="Logo_RuthenQuiz" title="Logo_RuthenQuiz" id="logo"/>
-</div>
-
-<div class="navbar">
-    <a href="index.php">Accueil</a> 
-   	<a href="forms.html">Formulaire</a>
-   	<a href="theme.php">Thèmes</a>
-   	<a href="create.html">Créer</a> 
-   	<a href="compte.php">Compte</a> 
-</div>
+<header>
+	<div class=logoMenu>
+		<img src="ressources/logo/logo_small.png" alt="Logo_RuthenQuiz" 	title="Logo_RuthenQuiz" id="logo"/>
+	</div>
+	
+	<div class="navbar">
+	    <a href="index.php">Accueil</a> 
+	   	<a href="forms.html">Formulaire</a>
+	   	<a href="theme.php">Thèmes</a>
+	   	<a href="create.html">Créer</a> 
+	   	<a href="compte.php">Compte</a> 
+	</div>
+</header>
